# journal-bot-backend

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_10_18_1521-d9aa3069016f_journal_entry.py  92f93c7be49d_journal_entry.py  996d3b5ea38c_create_journal_entries_table.py
journal_bot/: __init__.py  config.py  db.py  settings.py
journal_bot/ai_clients/: __init__.py  openai.py
journal_bot/lib/: templates.py
journal_bot/models/: journal_entry.py
journal_bot/router/: journal.py
